fixed banner image overflow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,6 +4,7 @@
 .banner-container {
 	position: relative;
 	height: 200px;
+	overflow: hidden;
 }
 .banner-background {
 	position: absolute;
